<resources>
    <string name="app_name">Library Tracker</string>
    <string name="stable_version">Latest Stable Version</string>
    <string name="latest_version">Latest Version</string>
    <string name="notification_channel_id">TrackerLibrary</string>
    <string name="notification_title">Updating Data</string>
    <string name="notification_cancel">Cancel</string>
    <string name="notification_channel_name">Tracker Library</string>
    <string name="updated_libs">Updated Data</string>
    <string name="update_failed">Update Failed</string>
    <string name="refresh">Refresh</string>
    <string name="retry">Retry</string>
    <string name="show_artifacts">Show Artifacts</string>
</resources>